--- a/index.html
+++ b/index.html
@@ -26,51 +26,51 @@
 <body>
     <div class="players">
         <div class="player">
-            <img src="photos/1.jpg" alt=""></img>
+            <img src="1.jpg" alt=""></img>
             <p>Leonel Messi</p>
         </div>
         <div class="player">
-            <img src="photos/2.jpg" alt=""></img>
+            <img src="2.jpg" alt=""></img>
             <p>Cristiano Rolando</p>
         </div>
         <div class="player">
-            <img src="photos/3.jpg" alt=""></img>
+            <img src="3.jpg" alt=""></img>
             <p>Neymar</p>
         </div>
         <div class="player">
-            <img src="photos/4.jpg" alt=""></img>
+            <img src="4.jpg" alt=""></img>
             <p>Paulo Dybala</p>
         </div>
         <div class="player">
-            <img src="photos/5.jpg" alt=""></img>
+            <img src="5.jpg" alt=""></img>
             <p>Robert Lewandowski</p>
         </div>
         <div class="player">
-            <img src="photos/6.jpg" alt=""></img>
+            <img src="6.jpg" alt=""></img>
             <p>Kylian Mbappé</p>
         </div>
         <div class="player">
-            <img src="photos/7.jpg" alt=""></img>
+            <img src="7.jpg" alt=""></img>
             <p>Mohamed Salah</p>
         </div>
         <div class="player">
-            <img src="photos/8.jpg" alt=""></img>
+            <img src="8.jpg" alt=""></img>
             <p>Kevin De Bruyne</p>
         </div>
         <div class="player">
-            <img src="photos/9.jpg" alt=""></img>
+            <img src="9.jpg" alt=""></img>
             <p>Luka Modrić</p>
         </div>
         <div class="player">
-            <img src="photos/10.jpg" alt=""></img>
+            <img src="10.jpg" alt=""></img>
             <p>Sergio Ramos</p>
         </div>
         <div class="player">
-            <img src="photos/11.jpg" alt=""></img>
+            <img src="11.jpg" alt=""></img>
             <p>Antoine Griezmann</p>
         </div>
         <div class="player">
-            <img src="photos/12.jpg" alt=""></img>
+            <img src="12.jpg" alt=""></img>
             <p>Harry Kane</p>
         </div>
 
